@@ -1,7 +1,7 @@
 ############################################################################
 # netutils/Makefile
 #
-#   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -102,7 +102,6 @@ clean:
 	@( for dir in $(SUBDIRS); do \
 		rm -f $${dir}/*~ $${dir}/.*.swp; \
 	done ; )
-	@$(MAKE) -C dhcpd -f Makefile.host clean
 
 distclean: clean
 	@rm -f Make.dep .depend
