@@ -1,60 +1,0 @@
-############################################################################
-# netutils/dhcpd/Makefile.host
-#
-#   Copyright (C) 2007 Gregory Nutt. All rights reserved.
-#   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions
-# are met:
-#
-# 1. Redistributions of source code must retain the above copyright
-#    notice, this list of conditions and the following disclaimer.
-# 2. Redistributions in binary form must reproduce the above copyright
-#    notice, this list of conditions and the following disclaimer in
-#    the documentation and/or other materials provided with the
-#    distribution.
-# 3. Neither the name NuttX nor the names of its contributors may be
-#    used to endorse or promote products derived from this software
-#    without specific prior written permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
-# FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-# COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
-# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
-# OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
-# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
-# LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-# ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-# POSSIBILITY OF SUCH DAMAGE.
-#
-############################################################################
-
-WD		= ${shell pwd}
-TOPDIR		= $(WD)/../..
-include $(TOPDIR)/Make.defs
-
-OBJS		= host.o1 dhcpd.o1
-BIN		= dhcpd
-
-HOSTCFLAGS	+= -DCONFIG_NETUTILS_DHCPD_HOST=1
-HOSTCFLAGS	+= -DCONFIG_NETUTILS_DHCPD_INTERFACE=\"eth1\"
-HOSTCFLAGS	+= -DHAVE_SO_REUSEADDR=1
-HOSTCFLAGS	+= -DHAVE_SO_BROADCAST=1
-
-all: $(BIN)
-.PHONY: clean context clean_context distclean
-
-$(OBJS): %$.o1: %$.c
-	$(HOSTCC) -c $(HOSTCFLAGS) $< -o $@
-
-$(BIN): $(OBJS)
-	$(HOSTCC) $(HOSTLDFLAGS) $^ -o $@
-
-clean:
-	@rm -f $(BIN) *.o1 *~
-
-
